--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,11 @@
     --c-light: #8987A1;
     --c-white: #fff;
     --c-green: #58E9C6;
+    --c-gray: #D6DDED;
+}
+
+h1, h2, h3, h4, h5, h5, p {
+    margin: 0;
 }
 
 * {
@@ -19,7 +24,7 @@ body {
 }
 
 body {
-    color: #000;
+    color: var(--c-dark);
     background-color: #fff;
     font-size: 16px;
     line-height: 1.4;
