--- a/components/blocks/participation/Participation.module.scss
+++ b/components/blocks/participation/Participation.module.scss
@@ -1,4 +1,5 @@
 .block {
+    position: relative;
     padding: 75px 0 100px;
 }
 .title {
@@ -29,4 +30,33 @@
 .btn {
     width: 100%;
     max-width: 384px;
+}
+
+.d1, .d2, .d3, .d4, .d5 {
+    top: 0;
+    position: absolute;
+}
+
+.d3 {
+    top: -4%;
+    right: 18%;
+}
+
+.d2 {
+    top: -6%;
+    right: 5%;
+}
+
+.d1 {
+    right: -7%;
+    top: 20%;
+}
+
+.d4 {
+    top: 40%;
+    left: -5%;
+}
+
+.d5 {
+    top: 60%;
 }
